Revert "community-site: fixes overflow wrap for amount in node profile page"
This reverts commit ad1d414e7cb7874d772d4c53a338a8ae51fde1f7.

--- a/services/community-site/src/pages/Staking/node-profile-page.scss
+++ b/services/community-site/src/pages/Staking/node-profile-page.scss
@@ -145,10 +145,6 @@
         width: 100%;
       }
 
-      .box-title {
-        overflow-wrap: anywhere;
-      }
-
       .barFlex {
         display: flex;
         flex-direction: row;
